# siphon

./: .gitignore  CLAUDE.md  QUERY_HISTORY_IMPLEMENTATION.md  README.md  SPEC.md  pyproject.toml
.claude/: settings.local.json
.claude/projects/-Users-bianders-Brian-Code-siphon/memory/: MEMORY.md  project_granite_speech_eval.md
.playwright-mcp/: page-2026-05-08T19-02-36-038Z.yml  page-2026-05-08T19-05-00-765Z.yml  page-2026-06-21T17-10-14-465Z.yml  page-2026-06-21T17-12-31-808Z.yml  page-2026-06-21T17-12-40-276Z.yml  page-2026-06-21T17-14-04-712Z.yml  page-2026-06-21T17-16-44-042Z.yml
dev/: benchmark.py
docs/plans/: 2026-03-24-newsletter-source-design.md  2026-04-08-audio-pipeline-refactor.md  2026-04-08-ephemeral-input-impl.md  2026-04-08-ephemeral-input-support.md
scripts/: deploy.sh  disk_audit.sh  disk_inspect.sh  driveb_models.sh  worker_logs.sh  worker_start.sh  worker_status.sh  worker_test.sh
siphon-api/src/siphon_api/: enums.py  interfaces.py  models.py
siphon-api/src/siphon_api/api/: batch_extract.py  siphon_request.py
siphon-client/: README.md  pyproject.toml
siphon-client/.claude/: settings.local.json
siphon-client/src/siphon_client/: client.py  ephemeral.py  retrieval.py  test_client.py
siphon-client/src/siphon_client/cli/: SPEC.md  bulk_extract.py  inspect.py  printer.py  query.py  results.py  scratchpad.py  siphon_cli.py  sync.py  test_printer.py  test_query.py  test_query_tty.py  traverse.py
siphon-client/src/siphon_client/collections/: collection.py
siphon-client/tests/: test_bulk_extract.py  test_ephemeral.py
siphon-server/: pyproject.toml
siphon-server/dev/: SPEC_pg19_books.md  fetch_long_transcripts.py  fetch_pg19_books.py  retrieval.md  summarization.md  sync_change_detection_spec.md  transcribe_local.py
siphon-server/docs/: docling-integration.md
siphon-server/docs/.claude/: settings.local.json
siphon-server/docs/plans/: 2026-03-20-docling-integration-design.md  2026-03-21-docling-integration-impl.md
siphon-server/docs/sources/doc/: DOCLING_MIGRATION.md
siphon-server/migrations/: add_embedding_column.sql
siphon-server/scripts/: embed_batch_v2.py  reenrich.py  reenrich_status.json
siphon-server/src/siphon_server/: config.py  metrics.py
siphon-server/src/siphon_server/.claude/: settings.local.json
siphon-server/src/siphon_server/core/: count_tokens.py  enrichment_trace.py  pipeline.py
siphon-server/src/siphon_server/database/postgres/: connection.py  converters.py  migrate_embedding_dim.py  models.py  repository.py  setup.py  test_repository.py
siphon-server/src/siphon_server/database/vector/: pgvector.py
siphon-server/src/siphon_server/services/: batch_extract_service.py
siphon-server/src/siphon_server/services/embeddings-service/: TODO.md
siphon-server/src/siphon_server/sources/article/: cache.py  description_guideline.jinja2  enricher.py  guideline.jinja2  parser.py
siphon-server/src/siphon_server/workers/: flux_imagegen.py  granite_speech.py  hidream_client.py  port_manifest.md  zimage_client.py
siphon-server/tests/: test_concurrency_integration.py  test_config.py  test_db_pool.py  test_extractor_thread_safety.py  test_metrics.py  test_vlm_client_reuse.py
siphon-server/tests/audio/: conftest.py  test_audio.py
siphon-server/tests/doc/: test_doc.py
src/siphon/cli/: siphon_cli.py
src/siphon/collections/: design_spec.md  monad_implementation.md  test_collections.py
src/siphon/collections/channel/: notes.md
src/siphon/collections/corpus/: siphon_corpus.py
src/siphon/collections/query/: siphon_query.py
src/siphon/data/: context_call.py  synthetic_data.py
src/siphon/data/type-definitions/: extensions.py  source_type.py  uri_schemes.py
src/siphon/enrich/: generate_description.py  generate_summary.py  generate_title.py  test_runner.py
src/siphon/ingestion/arxiv/: arxiv_CRUD.py  notes.md  paper.py
src/siphon/ingestion/audio/: clean.py  openai_transcript.py  test.py  transcribe.py
src/siphon/ingestion/github/: flatten_xml.py
src/siphon/ingestion/image/: describe_image_with_cloud.py  describe_image_with_ollama.py  retrieve_image.py
src/siphon/logs/: tracer.py
src/siphon/main/: siphon.py
src/siphon/scripts/: flatten_cli.py  survey_cli.py
src/siphon/scripts/flatten/: class.jinja2  docs_critique_prompt.jinja2  docstring_prompt.jinja2  file.jinja2  function.jinja2  generate_docs.py  module.jinja2  previous_response.json  project.jinja2  terse_docs_prompt.jinja2  verbose_docs_prompt.jinja2
src/siphon/synthetic_data/classes/: text_synthetic_data.py
src/siphon/tests/: test_minimal_siphon.py
src/siphon/tests/data/: test_URI.py
(+98 files in other folders)
