[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "siphon"
version = "0.5.0"
description = "An evolution of Leviathan - flexible media to LLM context converter with RAG capabilities"
requires-python = ">=3.12,<3.13"
dependencies = [
    "anthropic>=0.57.1",
    "conduit",
    "chromadb",
    "dbclients",
    "fastapi",
    "google-genai",
    "instructor>=1.9.2",
    "lxml[html-clean]>=6.0.0",
    "markitdown[all]",
    "newspaper3k",
    "ollama",
    "openai",
    "psycopg2-binary",
    "pyannote.audio",
    "pyaudio",
    "pydantic",
    "pydub",
    "pygithub>=2.6.1",
    "pyperclip>=1.9.0",
    "pytesseract>=0.3.13",
    "pytest>=8.4.1",
    "requests",
    "rerankers",
    "rich",
    "siphonserver",
    "sentence-transformers",
    "siphonserver",
    "tiktoken>=0.9.0",
    "tinydb>=4.8.2",
    "torch",
    "torchaudio",
    "torchvision",
    "transformers",
    "uvicorn",
    "youtube-transcript-api>=1.2.2",
    "yt-dlp[default]>=2025.6.30",
]


# ── Hatchling (build) ──────────────────────────────────────────────────────────
# Point Hatchling at the src/ package; this is the critical bit for src-layout.
[tool.hatch.build.targets.wheel]
packages = ["src/siphon"]
sources = ["src"]

# ── Pytest ─────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
addopts = "-v -s --tb=short --no-header --showlocals --pdb -x"
log_cli = true
log_cli_level = "INFO"



# ── Ruff ───────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
# Start with defaults (F, E subset) and add quality-of-life improvements
select = [
    # Default rules (Pyflakes + essential pycodestyle)
    "F",   # Pyflakes - catches real bugs
    "E",   # pycodestyle errors
    
    # Modern Python upgrades - automatic fixes for outdated syntax
    "UP",  # pyupgrade - keeps your code modern
    
    # Code simplification - removes unnecessary complexity
    "SIM", # flake8-simplify - cleaner, more readable code
    
    # Unused code detection
    "F401", # Unused imports (already in F, but emphasizing)
    "ARG",  # flake8-unused-arguments - catch unused function parameters
    
    # Common bug patterns
    "B",   # flake8-bugbear - catches subtle bugs and anti-patterns
    "RUF", # Ruff-specific rules - modern Python best practices
    
    # Security (basic set)
    "S102", # exec-builtin - catches dangerous exec() usage
    "S103", # bad-file-permissions - overly permissive file permissions
    "S108", # hardcoded-temp-file - security issue with temp files
    
    # Performance improvements
    "PERF", # Perflint - catches performance anti-patterns
    
    # Boolean trap prevention
    "FBT003", # boolean-positional-value-in-call - improves call clarity
]

ignore = [
    # Too aggressive for most teams
    "SIM118", # in-dict-keys - can reduce readability
    "ARG001", # unused-function-argument - common in callbacks/interfaces
    "ARG002", # unused-method-argument - common in class inheritance
    
    # Stylistic preferences (let formatter handle these)
    "E501",   # line-too-long - let formatter decide
]

[tool.ruff.lint.per-file-ignores]
# Test files can be more lenient
"tests/**/*.py" = [
    "S101",    # assert statements are fine in tests
    "ARG",     # test fixtures often have unused arguments
    "FBT",     # boolean flags are common in test parametrization
]

# Scripts and one-offs can be less strict
"scripts/**/*.py" = ["ARG", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["your_package_name"]  # Replace with your package name
force-sort-within-sections = true
split-on-trailing-comma = true

# ── uv sources (local/editable deps) ───────────────────────────────────────────
[tool.uv.sources]
siphonserver = { path = "../siphonserver-project", editable = true }
dbclients = { path = "../dbclients-project", editable = true }
conduit = { path = "../conduit-project", editable = true }

# ── entry points ───────────────────────────────────────────────────────────────
[project.scripts]
siphon = "siphon.cli.siphon_cli:main"
record = "siphon.scripts.record_cli:main"
play = "siphon.scripts.play_cli:main"
peek = "siphon.scripts.peek_cli:main"
flatten = "siphon.scripts.flatten_cli:main"
youtube = "siphon.scripts.youtube_cli:main"
ocr = "siphon.scripts.ocr_cli:main"
survey = "siphon.scripts.research_cli:main"
snapshot = "siphon.collections.query.snapshot:main"
obs = "siphon.scripts.obsidian_cli:main"
